[project]
name = "comfyui-psnodes"
description = "Various quality of life -nodes for ComfyUI, mostly just visual stuff to improve usability."
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["librosa", "numpy", "pillow>=10.3.0", "scipy", "color-matcher", "matplotlib", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/Pablerdo/ComfyUI-PSNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Pablerdo"
DisplayName = "ComfyUI-PSNodes"
Icon = ""
